--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.17.4",
     "lucide-react": "^0.400.0",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.4.5",
     "next": "14.2.4",
     "prettier": "^3.3.2",
     "react": "^18",
